syntax = "proto3";

package io.restorecommerce.fulfillment;

import "google/protobuf/any.proto";
import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/address.proto";
import "io/restorecommerce/country.proto";

/**
Microservice definition.
*/
service Service {
  /**
  Returns a list of shipment IDs.
  */
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (FulfillmentResponseList);

  /**
  Creates and executes fulfillment orders
  */
  rpc Create (FulfillmentRequestList) returns (FulfillmentResponseList);

  /**
  Track a batch of fulfillment orders
  */
  rpc Track (TrackingRequestList) returns (TrackingResultList);

  /**
  Cancel a batch of fulfillment orders
  */
  rpc Cancel (CancelRequestList) returns (FulfillmentResponseList);

  /**
  Delete a batch of fulfillments from the database
  */
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
}

enum State {
  Undefined = 0;
  Invalid = 1;
  Ordered = 2;
  Shipping = 3;
  Done= 4;
  Cancelled = 5;
  Failed = 6;
}

message Contact {
  string name = 1;
  string email = 2;
  string phone = 3;
}

message Branch {
  string provider = 1;
  string branch_number = 2;
  string post_number = 3;
}

message Packstation {
  string provider = 1;
  string station_number = 2;
  string post_number = 3;
}

message Address {
  string title = 1;
  repeated string name = 2;
  oneof type {
    io.restorecommerce.address.Address address = 3;
    Packstation packstation = 4;
    Branch branch = 5;
  };
  io.restorecommerce.country.Country country = 6;
  Contact contact = 7;
}

message Parcel {
  string product_id = 1;
  string product_variant_id = 2;
  repeated string item_ids = 3;
  float weight_in_kg = 4;
  float height_in_cm = 5;
  float width_in_cm = 6;
  float length_in_cm = 7;
}

message Order {
  string reference_id = 1;
  repeated Parcel parcels = 2;
  Address sender = 3;
  Address receiver = 4;
  string notify = 5;
}

message Label {
  oneof type {
    string url = 1;
    string pdf = 2;
    string png = 3;
  }
  string shipment_number = 4; //filled on Order
  State state = 5; //update by Track
  io.restorecommerce.status.Status status = 6; //API status
}

message FulfillmentRequest {
  string id = 1;
  Order order = 2;
  io.restorecommerce.meta.Meta meta = 3;
}

message FulfillmentRequestList {
  repeated FulfillmentRequest items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

/**
This is the message how it get stored to the database
*/
message Fulfillment {
  string id = 1;
  Order order = 2;
  io.restorecommerce.meta.Meta meta = 3;
  repeated Label labels = 4; //filled by service
  bool fulfilled = 5;
}

message FulfillmentResponse {
  Fulfillment payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message FulfillmentResponseList {
  repeated FulfillmentResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message TrackingRequest {
  string fulfillment_id = 1;
  repeated string shipment_numbers = 2; //optional
  google.protobuf.Any options = 3;
}

message TrackingRequestList {
  repeated TrackingRequest items = 1;
  io.restorecommerce.auth.Subject subject = 2;
}

message Event {
  int64 timestamp = 1;
  string location = 2;
  google.protobuf.Any details = 3;
  io.restorecommerce.status.Status status = 4;
}

message Tracking {
  string shipment_number = 1;
  repeated Event events = 3;
  google.protobuf.Any details = 4;
  io.restorecommerce.status.Status status = 5;
}

message TrackingResult {
  Fulfillment fulfillment = 1;
  repeated Tracking tracks = 2;
  io.restorecommerce.status.Status status = 3;
}

message TrackingResultList {
  repeated TrackingResult items = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}

message CancelRequestList {
  repeated string ids = 1;
  io.restorecommerce.auth.Subject subject = 2;
}

message Deleted {
  string id = 1;
}